--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll=false",
     "test:coverage": "jest --coverage --watchAll=false",
@@ -16,7 +16,6 @@
     "expo": "~52.0.0",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
-    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.0",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
